--- a/playbooks/teardown_hdp_setup.yml
+++ b/playbooks/teardown_hdp_setup.yml
@@ -1,5 +1,5 @@
 ---
-- import_playbook: "set_variables.yml"
+- import_playbook: "set_inventory.yml"
   tags: always
 
 - name: Apply teardown hdp setup roles to the hadoop-cluster group
