--- a/playbooks/roles/ambari-config/defaults/main.yml
+++ b/playbooks/roles/ambari-config/defaults/main.yml
@@ -3,11 +3,11 @@
 ### These are defaults originaly in each OS type vars
 ### by moving these here it allows for over-riding
 
-gpl_repo_url: "{{ repo_base_url }}/HDP-GPL/{{ repo_os_family }}/{{ hdp_major_version }}.x/updates/{{ hdp_version }}"
+gpl_repo_url: "{{ repo_base_url }}/HDP-GPL/{{ hdp_major_version }}.x/{{ hdp_version }}/{{ repo_os_family }}"
 
-hdf_main_repo_url: "{{ repo_base_url }}/HDF/{{ repo_os_family }}/{{ hdf_major_version }}.x/updates/{{ hdf_version }}"
+hdf_main_repo_url: "{{ repo_base_url }}/HDF/{{ hdf_major_version }}.x/{{ hdf_version }}/{{ repo_os_family }}"
 
-hdp_main_repo_url: "{{ repo_base_url }}/HDP/{{ repo_os_family }}/{{ hdp_major_version }}.x/updates/{{ hdp_version }}"
+hdp_main_repo_url: "{{ repo_base_url }}/HDP/{{ hdp_major_version }}.x/{{ hdp_version }}/{{ repo_os_family }}"
 hdpsearch_main_repo_url: "{{ repo_base_url }}/HDP-SOLR-{{ hdpsearch_version }}-{{ hdpsearch_build_number }}/repos/{{ repo_os_family }}"
 
 main_os_target: "operating_systems/{{ baseurl_os_family }}"
