--- a/playbooks/roles/ambari-config/defaults/main.yml
+++ b/playbooks/roles/ambari-config/defaults/main.yml
@@ -13,4 +13,5 @@ hdpsearch_main_repo_url: "{{ repo_base_url }}/HDP-SOLR-{{ hdpsearch_version }}-{
 main_os_target: "operating_systems/{{ baseurl_os_family }}"
 
 utils_os_target: "operating_systems/{{ baseurl_os_family }}/repositories/HDP-UTILS-{{ utils_version }}"
-utils_repo_url: "{{ repo_base_url }}/HDP-UTILS-{{ utils_version }}/repos/{{ repo_os_family }}"
+utils_repo_url: "{{ repo_base_url }}/HDP-UTILS/{{ utils_version }}/repos/{{ repo_os_family }}"
+
